Eval notebook + Callable simulator (main variant) added